--- a/training_and_inference/config_files_train_and_inf/after_optuna/config_t2_difference_baseline_after_optuna_f4.json
+++ b/training_and_inference/config_files_train_and_inf/after_optuna/config_t2_difference_baseline_after_optuna_f4.json
@@ -2,7 +2,7 @@
 	"fold_to_do": 4,
 	"network": "customVGG",
 	"df_dates_and_labels_had": "/path/to/extra_files/df_dates_and_t2_labels_had.csv",
-	"input_dir": "/path/to/T2_difference_maps/out_Mar_22_2022_manual_labels",
+	"input_dir": "/path/to/HAD_diffmaps",
 	"out_dir": "/path/to/classification_out_dir/",
 	"optuna_output_dir": "/path/to/specific_optuna_output_dir/",
 	"study_name": "optuna_best_params_foldX_optuna_baseline",
